--- a/older/externalSF.css
+++ b/older/externalSF.css
@@ -14,7 +14,7 @@
     height:1800px;*/
 	margin:0px;
 	border:2px solid gray;
-	background-image:url(images/bg6.jpg);
+	background-image:url(../images/bg6.jpg);
 	background-repeat:repeat-y repeat-x;
 	
 	
